--- a/templates/check.html
+++ b/templates/check.html
@@ -10,14 +10,24 @@
         </p>
         <br>
         <form action = "check" method = "post">
-            {% for message in get_flashed_messages() %}
-                <p>{{message}}</p>
-            {% endfor  %}
             <p> What song? </p>
             <br>
             <input type = "text" name = "song_input">
             <br>
             <input type = "submit" value = "CHECK" id = "check">
+
+            <!-- this is for messages in the first thing-->
+            {% for message in get_flashed_messages() %}
+                <p>{{message}}</p>
+            {% endfor %}
+
+            <!-- this is for message in the second thing -->
+
+            {% for message in get_flashed_messages(with_categories=true)%}
+                {% of message[0] == "song_check" %}
+                <p>{{message[1]}}</p>
+            {% endfor %}
+            
         </form>
     </body>
 </html>
