--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Spotify App </title>
+        <link rel="stylesheet" href = "{{
+            url_for('static', filename='css/main.css')
+        }}">
     </head>
     <body>
         <p>
