--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,15 +6,15 @@ body {
 
 p {
     color: white;
-    font: Arial;
-    font-size: 1.2em;
+    font-family: sans-serif;
+    font-size: 1.5em;
     margin: 20px;
 }
 
 img {
-    margin: 60px 0 30px 0;
-    width: 250px;
-    height: 250px;
+    margin: 30px 0 30px 0;
+    width: 300px;
+    height: 300px;
 }
 
 input {
@@ -24,12 +24,12 @@ input {
     border: none;
     border-radius: 10px;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.6em;
 }
 
 #check {
     background-color: paleturquoise;
-    color: white;
+    color: black;
     width: 200px;
 
 }
@@ -39,4 +39,10 @@ input {
     cursor: pointer;
 
 
+}
+
+#special {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
 }
