--- a/templates/check.html
+++ b/templates/check.html
@@ -13,16 +13,13 @@
         </p>
         <br>
         <form action = "check" method = "post">
-            <p> What song? </p>
-            <br>
             <input type = "text" name = "song_input">
             <br>
             <input type = "submit" value = "CHECK" id = "check">
 
             <!-- this is for messages in the first thing-->
-            {% for message in get_flashed_messages() %}
-                <p>{{message}}</p>
-            {% endfor %}
+            
+                <p>{{message1}}</p>
 
             <!--image from the song-->
             <p>
@@ -33,11 +30,9 @@
 
             <!-- this is for message in the second thing -->
 
-            {% for message in get_flashed_messages(with_categories=true)%}
-                {% if message[0] == "song_check" %}
-                <p>{{message[1]}}</p>
-                {% endif %}
-            {% endfor %}
+                <p id="special"><a href = "{{play_url}}" target="_blank">
+                    {{message2}}
+                </a></p>
 
 
             
