Backend works, fronted needs to be done

--- a/templates/check.html
+++ b/templates/check.html
@@ -30,11 +30,11 @@
 
             <!-- this is for message in the second thing -->
 
-                <p id="special"><a href = "{{play_url}}" target="_blank">
-                    {{message2}}
-                </a></p>
-
-
+                <p>
+                    <a href = "{{play_url}}" target="_blank">
+                        {{message2}}
+                    </a>
+                </p>
             
         </form>
     </body>
