--- a/templates/check.html
+++ b/templates/check.html
@@ -32,6 +32,8 @@
 
             <!-- this is for message in the second thing -->
 
+        {{audio|safe}}
+
         <p>
             <a href="{{play_url}}" target="_blank">
                 {{naval}}
