Audio integration complete

--- a/templates/check.html
+++ b/templates/check.html
@@ -19,7 +19,10 @@
 
             <!-- this is for messages in the first thing-->
             
-                <p>{{message1}}</p>
+                <p>{{message1}}
+                    <br>
+                    {{message_new}}
+                </p>
 
             <!--image from the song-->
             <p>
