Created login functionality

--- a/templates/check.html
+++ b/templates/check.html
@@ -42,6 +42,13 @@
                 {{naval}}
             </a>
         </p>
+
+        <br>
+        <p>
+            <a href = "/login">
+                Login With Spotify
+            </a>
+        </p>
     
     </body>
 </html>
