--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,11 @@
             <br>
             <input type = "submit" value = "CHECK" id = "check">
         </form>
+        <br>
+        <p>
+            <a href = "/login">
+                Login With Spotify
+            </a>
+        </p>
     </body>
 </html>
