--- a/templates/randomplay.html
+++ b/templates/randomplay.html
@@ -8,29 +8,43 @@
         }}">
     </head>
     <body>
+
+        <h1>
+            Refresh for a new Playlist
+        </h1>
+        
         <p>
+            
             <a href = "{{playlist_link}}" target = "_blank">
                 {{playlist_name}}
             </a>
+            <br>
             User: {{user_name}}
 
             <br>
             {{image_code|safe}}
 
-            Most Featured Artist: {{artist_name}} {{n1}}
-            Most Featured Album: {{album_name}} {{n1}}
+            Most Featured Artist: {{artist_name}} <br> {{n1}} times
+            <br>
+            Most Featured Album: {{album_name}} <br> {{n2}} times
 
+            <br>
             <br>
 
             Average Popularity: {{avg_pop}}
+            <br>
             Most Popular Song: {{most_pop}} {{n3}}
+            <br>
             Least Popular Song: {{least_pop}} {{n4}}
 
             <br>
+            <br>
 
             Average Duration: {{avg_du}}
-            Longest Song: {{most_du}}
-            Shortest Song: {{least_du}}
+            <br>
+            <br>
+            Longest Song <br> {{most_du}} <br> {{n5}} <br>
+            Shortest Song <br> {{least_du}} <br> {{n6}}
 
 
         </p>
