--- a/templates/randomplay.html
+++ b/templates/randomplay.html
@@ -9,6 +9,20 @@
     </head>
     <body>
 
+        <header class="header">
+
+            <nav class="nav-list">
+                <a href = "/">Home</a>
+                <a href = "/">Song Search</a>
+                <a href = "/login">Login</a>
+                <a href = "/wrapped">Wrapped</a>
+                <a href = "/playlists">Playlist Wrapped</a>
+                <a href = "/recommender">Recommender</a>
+                <a href = "/cover">Playlist Cover</a>
+            </nav>
+        </header>
+
+
         <h1>
             Refresh for a new Playlist
         </h1>
