Updates to wrapped function

--- a/templates/wrapped.html
+++ b/templates/wrapped.html
@@ -35,6 +35,14 @@
 
             </select>
             <br>
+            <label for="timeType">Select type: </label>
+            <select id="timeType" name="time_type">
+                <option value="0">Last 4 Weeks</option>
+                <option value="1">Last 6 Months</option>
+                <option value="2">Lifetime</option>
+
+            </select>
+            <br>
             <label for="topType">Top</label>
             <select id="topType" name="top_type">
                 <option value="0">Top 10</option>
