--- a/templates/wrappedAfter.html
+++ b/templates/wrappedAfter.html
@@ -35,6 +35,14 @@
 
             </select>
             <br>
+            <label for="timeType">Select type: </label>
+            <select id="timeType" name="time_type">
+                <option value="0">Last 4 Weeks</option>
+                <option value="1">Last 6 Months</option>
+                <option value="2">Lifetime</option>
+
+            </select>
+            <br>
             <label for="topType">Top</label>
             <select id="topType" name="top_type">
                 <option value="0">Top 10</option>
@@ -42,12 +50,12 @@
             </select>
             <br>
         </form>
-        <br>
+       <br>
 
         <p>
-            Here are your {{top_variable}} {{search_variable}}
+            Here are your {{top_var}} {{search_var}} in the {{time_var}}
 
-            {{list|safe}}
+            {{top_list|safe}}
         </p>
         
     </body>
