--- a/templates/wrapp.html
+++ b/templates/wrapp.html
@@ -26,7 +26,7 @@
             What kind of wrapped would you like?
         </p>
         <br>
-        <form action = "wrappedAfter" method = "post">
+        <form action = "wrapped" method = "post">
             <label for="searchType">Select type: </label>
             <select id="searchType" name="search_type">
                 <option value="0">Tracks</option>
@@ -49,14 +49,9 @@
                 <option value="1">Top 50</option>
             </select>
             <br>
+            <input type="submit" value="Submit" id="submitBtn">
         </form>
-       <br>
-
-        <p>
-            Here are your {{top_var}} {{search_var}} in the {{time_var}}
-
-            {{top_list|safe}}
-        </p>
+        <br>
         
     </body>
 </html>
