--- a/templates/randomplay.html
+++ b/templates/randomplay.html
@@ -15,7 +15,7 @@
                 <a href = "/">Home</a>
                 <a href = "/">Song Search</a>
                 <a href = "/login">Login</a>
-                <a href = "/wrapped">Wrapped</a>
+                <a href = "/wrap">Wrapped</a>
                 <a href = "/playlists">Playlist Wrapped</a>
                 <a href = "/recommender">Recommender</a>
                 <a href = "/cover">Playlist Cover</a>
