--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,4 +109,6 @@ table {
     width: 80%;
     margin: 20px auto;
     border-collapse: collapse;
+    font-family: sans-serif;
+    color: #fff
 }
